// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Mostrar correctamente el titulo 1`] = `
<span
  className="productDescription undefined"
>
  Custom Title
</span>
`;

exports[`ProductTitle debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined "
>
  <span
    className="productDescription undefined"
  >
    Custom Title
  </span>
</div>
`;
